HelloUltraviolet/Fixtures/RejectedSource/SourceText/UnterminatedBlockComment/Source/Main.uv
//! Rejected lexical specimen for an unterminated block comment.

public procedure unterminatedBlockCommentReference() -> i32 {
    /* unterminated block comment
    return 0
}
